1. Исправлены тесты 2. Сделан реформат кода: добавлена функция responseErrorGeneration в абстрактный класс BaseHttpHandler 3. Сделан рефокторинг кода